cloudformation/preprocessing-compute.yaml
# A template that creates a compute environment
#
# Copyright 2017 Melon Software Ltd (UK), all rights reserved.  Used under license.
#
AWSTemplateFormatVersion: "2010-09-09"
Description: "Creates a Batch Compute Environment for the pre-processing pipeline"

Parameters:

    # Environment name
    Environment:
        Type: "String"
        Description: "The name of the environment"

    MultiAz:
        Type: "String"
        AllowedValues: [ "true", "false" ]
        Description: "Whether to create instances in multiple AZs.  This has an additional cost."

    # The second part of the CIDR block for the VPN (10.xx.0.0/24).
    VpnCidr:
        Type: "Number"
        MinValue: 0
        MaxValue: 255
        Description: "The second digit in the IP range (10.xx.0.0/16).  VPNs with overlapping address spaces cannot be peered."

    InstanceSize:
        Type: "String"
        AllowedValues: [
            "c3", "c3.large", "c3.xlarge", "c3.2xlarge", "c3.4xlarge", "c3.8xlarge",
            "c4", "c4.large", "c4.xlarge", "c4.2xlarge", "c4.4xlarge", "c4.8xlarge",
            "d2", "d2.xlarge", "d2.2xlarge", "d2.4xlarge", "d2.8xlarge",
            "f1", "f1.2xlarge", "f1.16xlarge",
            "g2", "g2.2xlarge", "g2.8xlarge",
            "i2", "i2.xlarge", "i2.2xlarge", "i2.4xlarge", "i2.8xlarge",
            "i3", "i3.xlarge", "i3.2xlarge", "i3.4xlarge", "i3.8xlarge", "i3.16xlarge",
            "m3", "m3.medium", "m3.large", "m3.2xlarge", "m3.xlarge",
            "m4", "m4.large", "m4.xlarge", "m4.2xlarge", "m4.4xlarge", "m4.10xlarge", "m4.16xlarge",
            "optimal",
            "p2", "p2.xlarge", "p2.8xlarge", "p2.16xlarge",
            "r3", "r3.large", "r3.xlarge", "r3.2xlarge", "r3.4xlarge", "r3.8xlarge",
            "r4", "r4.large", "r4.xlarge", "r4.2xlarge", "r4.4xlarge", "r4.8xlarge", "r4.16xlarge",
            "x1", "x1.16xlarge", "x1.32xlarge"
        ]
        Description: "What type the EC2 instances should be"

    Ami:
        Type: "AWS::EC2::Image::Id"
        Default: "ami-45224425"
        Description: "The AMI to build the Compute Environment EC2 instances from"

    Keypair:
        Type: "String"
        Default: ""
        Description: "A SSH keypair to grant access to instances"

    MongoDbPeeringVpc:
        Type: "String"
        Default: ""
        Description: "MongoDB VPC ID"

    MongoDbPeeringCidr:
        Type: "String"
        Description: "MongoDB VPC CIDR range"
        Default: ""
        MaxLength: "18"
        AllowedPattern: "^((\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2}))|$"
        ConstraintDescription: "Must be a valid IP CIDR range of the form x.x.x.x/x."
        
Metadata:
    "AWS::CloudFormation::Interface":
        ParameterGroups:
          - Label: { default: "Definition" }
            Parameters:
              - "Environment"
          - Label: { default: "Configuration" }
            Parameters:
              - "MultiAz"
              - "VpnCidr"
              - "Ec2InstanceSize"
              - "Ec2Ami"
              - "Ec2Keypair"
              - "MongoDbPeeringVpc"
              - "MongoDbPeeringCidr"
            
        ParameterLabels:
            Environment: { default: "Environment" }
            MultiAz: { default: "Multi AZ?" }
            VpnCidr: { default: "VPN CIDR block" }
            HostedZoneId: { default: "Hosted Zone" }
            InstanceSize: { default: "EC2 Instance Size" }
            Ami: { default: "EC2 AMI" }
            Keypair: { default: "EC2 Keypair" }
            MongoDbPeeringVpc: { default: "MongoDB VPN ID" }
            MongoDbPeeringCidr: { default: "MongoDB VPN CIDR" }

Conditions:
    MultiAz: { "Fn::Not": [ { "Fn::Equals": [ { Ref: "MultiAz" }, "false" ] } ] }
    AllowSsh: { "Fn::Not": [ { "Fn::Equals": [ { Ref: "Keypair" }, "" ] } ] }
    CreateMongoDbPeeringConnection: { "Fn::Not": [ { "Fn::Equals": [ { Ref: "MongoDbPeeringVpc" }, "" ] } ] }
    MultiAzAndCreateMongoDbPeeringConnection: { "Fn::And": [
        { "Fn::Not": [ { "Fn::Equals": [ { Ref: "MongoDbPeeringVpc" }, "" ] } ] },
        { "Fn::Not": [ { "Fn::Equals": [ { Ref: "MultiAz" }, "false" ] } ] }
    ] }

Resources:

    ##########################################################################################################
    ## VPC & NETWORKING
    ##########################################################################################################

    Vpc:
        Type: "AWS::EC2::VPC"
        Properties:
            CidrBlock: { "Fn::Sub": "10.${VpnCidr}.0.0/16" }
            EnableDnsSupport: "true"
            EnableDnsHostnames: "true"
            InstanceTenancy: "default"
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }

    InternetGateway:
        Type: "AWS::EC2::InternetGateway"
        Properties :
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }

    InternetGatewayVpcAttachment:
        Type: "AWS::EC2::VPCGatewayAttachment"
        Properties:
            VpcId: { Ref: "Vpc" }
            InternetGatewayId: { Ref: "InternetGateway" }

    MongoDbPeeringConnection:
        Type: "AWS::EC2::VPCPeeringConnection"
        Properties:
            PeerVpcId: { Ref: "MongoDbPeeringVpc" }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-peering" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }
            VpcId: { Ref: "Vpc" }
        Condition: "CreateMongoDbPeeringConnection"

    ##########################################################################################################
    ##  PUBLIC AZ ALPHA
    ##########################################################################################################

    PublicSubnetAlpha:
        Type: "AWS::EC2::Subnet"
        Properties:
            VpcId: { Ref: "Vpc" }
            CidrBlock: { "Fn::Sub": "10.${VpnCidr}.0.0/24" }
            MapPublicIpOnLaunch: true
            AvailabilityZone: { "Fn::Join": [ "", [ { Ref: "AWS::Region" }, "a" ] ] }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-public-alpha" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }

    PublicRouteTableAlpha:
        Type: "AWS::EC2::RouteTable"
        Properties:
            VpcId: { Ref: "Vpc" }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-public-alpha" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }

    PublicSubnetAlphaRouteTableAssociation:
        Type: "AWS::EC2::SubnetRouteTableAssociation"
        Properties:
            SubnetId: { Ref: "PublicSubnetAlpha" }
            RouteTableId: { Ref: "PublicRouteTableAlpha" }

    PublicRouteAlpha:
        Type: "AWS::EC2::Route"
        Properties:
            RouteTableId: { Ref: "PublicRouteTableAlpha" }
            GatewayId: { Ref: "InternetGateway" }
            DestinationCidrBlock: "0.0.0.0/0"
        DependsOn: "InternetGatewayVpcAttachment"

    PublicAlphaMongoDbPeeringRoute:
        Type: "AWS::EC2::Route"
        Properties:
            RouteTableId: { Ref: "PublicRouteTableAlpha" }
            VpcPeeringConnectionId: { Ref: "MongoDbPeeringConnection" }
            DestinationCidrBlock: { Ref: "MongoDbPeeringCidr" }
        Condition: "CreateMongoDbPeeringConnection"
        DependsOn: "InternetGatewayVpcAttachment"

    NatGatewayEipAlpha:
        Type: "AWS::EC2::EIP"
        Properties:
            Domain: "vpc"

    NatGatewayAlpha:
        DependsOn: "InternetGatewayVpcAttachment"
        Type: "AWS::EC2::NatGateway"
        Properties:
            AllocationId: { "Fn::GetAtt" : [ "NatGatewayEipAlpha", "AllocationId" ] }
            SubnetId: { Ref: "PublicSubnetAlpha" }

    ##########################################################################################################
    ##  PUBLIC AZ BETA
    ##########################################################################################################

    PublicSubnetBeta:
        Type: "AWS::EC2::Subnet"
        Properties:
            VpcId: { Ref: "Vpc" }
            CidrBlock:  { "Fn::Sub": "10.${VpnCidr}.100.0/24" }
            AvailabilityZone: { "Fn::Join": [ "", [ { Ref: "AWS::Region" }, "b" ] ] }
            MapPublicIpOnLaunch: true
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-public-beta" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }
        Condition: "MultiAz"

    PublicRouteTableBeta:
        Type: "AWS::EC2::RouteTable"
        Properties:
            VpcId: { Ref: "Vpc" }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-public-beta" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }
        Condition: "MultiAz"

    PublicSubnetBetaRouteTableAssociation:
        Type: "AWS::EC2::SubnetRouteTableAssociation"
        Properties:
            SubnetId: { Ref: "PublicSubnetBeta" }
            RouteTableId: { Ref: "PublicRouteTableBeta" }
        Condition: "MultiAz"

    PublicRouteBeta:
        Type: "AWS::EC2::Route"
        Properties:
            RouteTableId: { Ref: "PublicRouteTableBeta" }
            GatewayId: { Ref: "InternetGateway" }
            DestinationCidrBlock: "0.0.0.0/0"
        Condition: "MultiAz"
        DependsOn: "InternetGatewayVpcAttachment"

    PublicBetaMongoDbPeeringRoute:
        Type: "AWS::EC2::Route"
        Properties:
            RouteTableId: { Ref: "PublicRouteTableBeta" }
            VpcPeeringConnectionId: { Ref: "MongoDbPeeringConnection" }
            DestinationCidrBlock: { Ref: "MongoDbPeeringCidr" }
        Condition: "MultiAzAndCreateMongoDbPeeringConnection"
        DependsOn: "InternetGatewayVpcAttachment"

    NatGatewayEipBeta:
        Type: "AWS::EC2::EIP"
        Properties:
            Domain: "vpc"
        Condition: "MultiAz"

    NatGatewayBeta:
        DependsOn: "InternetGatewayVpcAttachment"
        Type: "AWS::EC2::NatGateway"
        Properties:
            AllocationId: { "Fn::GetAtt" : [ "NatGatewayEipBeta", "AllocationId" ] }
            SubnetId: { Ref: "PublicSubnetBeta" }
        Condition: "MultiAz"

    ##########################################################################################################
    ##  PRIVATE AZ ALPHA
    ##########################################################################################################

    PrivateSubnetAlpha:
        Type: "AWS::EC2::Subnet"
        Properties:
            VpcId: { Ref: "Vpc" }
            CidrBlock: { "Fn::Sub": "10.${VpnCidr}.1.0/24" }
            AvailabilityZone: { "Fn::Join": [ "", [ { Ref: "AWS::Region" }, "a" ] ] }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-private-alpha" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }

    PrivateRouteTableAlpha:
        Type: "AWS::EC2::RouteTable"
        Properties:
            VpcId: { Ref: "Vpc" }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-private-alpha" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }

    PrivateSubnetAlphaRouteTableAssociation:
        Type: "AWS::EC2::SubnetRouteTableAssociation"
        Properties:
            SubnetId: { Ref: "PrivateSubnetAlpha" }
            RouteTableId: { Ref: "PrivateRouteTableAlpha" }

    PrivateRouteAlpha:
        Type: "AWS::EC2::Route"
        Properties:
            RouteTableId: { Ref: "PrivateRouteTableAlpha" }
            NatGatewayId: { Ref: "NatGatewayAlpha" }
            DestinationCidrBlock: "0.0.0.0/0"
        DependsOn: "InternetGatewayVpcAttachment"

    PrivateAlphaMongoDbPeeringRoute:
        Type: "AWS::EC2::Route"
        Properties:
            RouteTableId: { Ref: "PrivateRouteTableAlpha" }
            VpcPeeringConnectionId: { Ref: "MongoDbPeeringConnection" }
            DestinationCidrBlock: { Ref: "MongoDbPeeringCidr" }
        Condition: "CreateMongoDbPeeringConnection"
        DependsOn: "InternetGatewayVpcAttachment"

    ##########################################################################################################
    ##  PRIVATE AZ BETA
    ##########################################################################################################

    PrivateSubnetBeta:
        Type: "AWS::EC2::Subnet"
        Properties:
            VpcId: { Ref: "Vpc" }
            CidrBlock: { "Fn::Sub": "10.${VpnCidr}.101.0/24" }
            AvailabilityZone: { "Fn::Join": [ "", [ { Ref: "AWS::Region" }, "b" ] ] }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-private-beta" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }
        Condition: "MultiAz"

    PrivateRouteTableBeta:
        Type: "AWS::EC2::RouteTable"
        Properties:
            VpcId: { Ref: "Vpc" }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-private-beta" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }
        Condition: "MultiAz"

    PrivateSubnetBetaRouteTableAssociation:
        Type: "AWS::EC2::SubnetRouteTableAssociation"
        Properties:
            SubnetId: { Ref: "PrivateSubnetBeta" }
            RouteTableId: { Ref: "PrivateRouteTableBeta" }
        Condition: "MultiAz"

    PrivateRouteBeta:
        Type: "AWS::EC2::Route"
        Properties:
            RouteTableId: { Ref: "PrivateRouteTableBeta" }
            NatGatewayId: { Ref: "NatGatewayBeta" }
            DestinationCidrBlock: "0.0.0.0/0"
        Condition: "MultiAz"
        DependsOn: "InternetGatewayVpcAttachment"

    PrivateBetaMongoDbPeeringRoute:
        Type: "AWS::EC2::Route"
        Properties:
            RouteTableId: { Ref: "PrivateRouteTableBeta" }
            VpcPeeringConnectionId: { Ref: "MongoDbPeeringConnection" }
            DestinationCidrBlock: { Ref: "MongoDbPeeringCidr" }
        Condition: "MultiAzAndCreateMongoDbPeeringConnection"
        DependsOn: "InternetGatewayVpcAttachment"

    ##########################################################################################################
    ##  ENDPOINTS
    ##########################################################################################################

    # An S3 endpoint provides a direct connection from the EC2 instances to S3; providing lower latency
    # and without incurring network bandwidth charges.  Note that currently they don't support commands like
    # sync between S3 buckets in different regions :(
    S3Endpoint:
        Type: "AWS::EC2::VPCEndpoint"
        Properties:
            RouteTableIds: { "Fn::If": [
                "MultiAz",
                [
                    { Ref: "PublicRouteTableAlpha" },
                    { Ref: "PrivateRouteTableAlpha" },
                    { Ref: "PublicRouteTableBeta" },
                    { Ref: "PrivateRouteTableBeta" }
                ],
                [
                    { Ref: "PublicRouteTableAlpha" },
                    { Ref: "PrivateRouteTableAlpha" }
                ]
            ] }
            ServiceName: { "Fn::Sub": "com.amazonaws.${AWS::Region}.s3" }
            VpcId: { Ref: "Vpc" }

    ##########################################################################################################
    ##  ROUTE53
    ##########################################################################################################

    PrivateHostedZone:
        Type: "AWS::Route53::HostedZone"
        Properties:
            Name: "internal"
            HostedZoneConfig:
                Comment: { "Fn::Sub": "Hosted zone created by the '${AWS::StackName}' CloudFormation stack" }
            HostedZoneTags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-compute-private" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "private" }
              - { Key: "Environment", Value: { Ref: "Environment" } }
            VPCs:
              - VPCId: { Ref: "Vpc" }
                VPCRegion: { Ref: "AWS::Region" }

    ##########################################################################################################
    ##  EFS
    ##########################################################################################################

    EfsSecurityGroup:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "Security group which allows access to the Elastic File System"
            VpcId: { Ref: "Vpc" }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-compute-efs" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }

    EfsSecurityGroupSelfReference:
        Type: "AWS::EC2::SecurityGroupIngress"
        Properties:
            GroupId: { Ref: "EfsSecurityGroup" }
            IpProtocol: "tcp"
            FromPort: "0"
            ToPort: "65535"
            SourceSecurityGroupId: { Ref: "EfsSecurityGroup" }

    EfsFileSystem:
        Type: "AWS::EFS::FileSystem"
        Properties:
            FileSystemTags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }
            PerformanceMode: "generalPurpose"

    EfsMountTargetAlpha:
        Type: "AWS::EFS::MountTarget"
        Properties:
            FileSystemId: { Ref: "EfsFileSystem" }
            SecurityGroups:
              - { Ref: "EfsSecurityGroup" }
            SubnetId: { Ref: "PrivateSubnetAlpha" }

    EfsMountTargetBeta:
        Type: "AWS::EFS::MountTarget"
        Properties:
            FileSystemId: { Ref: "EfsFileSystem" }
            SecurityGroups:
              - { Ref: "EfsSecurityGroup" }
            SubnetId: { Ref: "PrivateSubnetBeta" }
        Condition: "MultiAz"

    EfsDnsRecord:
      Type: "AWS::Route53::RecordSet"
      Properties:
          HostedZoneId: { Ref: "PrivateHostedZone" }
          Name: "efs.internal"
          Type: "CNAME"
          TTL: '600'
          ResourceRecords:
            - { "Fn::Sub": "${EfsFileSystem}.efs.${AWS::Region}.amazonaws.com." }

    ##########################################################################################################
    ##  KMS
    ##########################################################################################################

    ParameterStoreKey:
        Type: "AWS::KMS::Key"
        Properties:
            Description: { "Fn::Sub": "Encryption for configuration parameters in the ${Environment} cluster" }
            Enabled: true
            EnableKeyRotation: false
            KeyPolicy:
                Version: "2012-10-17"
                Id: "default"
                Statement:
                  - Sid: "Enable IAM User Permissions"
                    Effect: "Allow"
                    Principal:
                        AWS: { "Fn::Sub": "arn:aws:iam::${AWS::AccountId}:root" }
                    Action: "kms:*"
                    Resource: "*"

    ParameterStoreKeyAlias:
        Type: "AWS::KMS::Alias"
        Properties:
            AliasName: { "Fn::Sub": "alias/preprocessing/${Environment}" }
            TargetKeyId: { Ref: "ParameterStoreKey" }

    ##########################################################################################################
    ##  EC2
    ##########################################################################################################

    Ec2InstanceStartupRole:
        Type: "AWS::IAM::Role"
        Properties:
            AssumeRolePolicyDocument:
                Version: "2012-10-17"
                Statement:
                  - Effect: "Allow"
                    Principal: { Service: [ "ec2.amazonaws.com" ] }
                    Action: "sts:AssumeRole"
            ManagedPolicyArns:
              - "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
            RoleName: { "Fn::Sub": "preprocessing-${Environment}-compute-ec2-${AWS::Region}" }

    Ec2InstanceStartupProfile:
        Type: "AWS::IAM::InstanceProfile"
        Properties:
            Path: "/"
            Roles: [ { Ref: "Ec2InstanceStartupRole" } ]

    Ec2SecurityGroup:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "Security group for preprocessing EC2 instances"
            VpcId: { Ref: "Vpc" }
            SecurityGroupIngress:
                # All ports open from internal access
              - IpProtocol: "tcp"
                FromPort: "0"
                ToPort: "65535"
                CidrIp: { "Fn::Sub": "10.${VpnCidr}.0.0/16" }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-compute-ec2" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }

    Ec2SecurityGroupExternalSsh:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "Security group allowing external SSH access"
            VpcId: { Ref: "Vpc" }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-compute-ec2-ssh" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }

    ##########################################################################################################
    ##  BATCH
    ##########################################################################################################

    BatchComputeEnvironment:
        Type: "AWS::Batch::ComputeEnvironment"
        Properties:
            ComputeEnvironmentName: { "Fn::Sub": "preprocessing-${Environment}-compute" }
            ComputeResources:
                Ec2KeyPair: { Ref: "Keypair" }
                InstanceRole: { Ref: "Ec2InstanceStartupProfile" }
                InstanceTypes: [ { Ref: "InstanceSize" } ]
                MaxvCpus: 16
                MinvCpus: 0
                SecurityGroupIds:
                  - { Ref: "Ec2SecurityGroup" }
                  - { Ref: "EfsSecurityGroup" }
                Subnets:
                  - { Ref: "PrivateSubnetAlpha" }
                Tags:
                    Name: { "Fn::Sub": "preprocessing-${Environment}-compute" }
                    Management: "managed"
                    Project: "preprocessing"
                    Environment: { Ref: "Environment" }
                    Service: "batch"
                Type: "EC2"
            ServiceRole: { "Fn::ImportValue": "BatchServiceRole" }
            State: "ENABLED"
            Type: "MANAGED"

    BatchJobQueue:
        Type: "AWS::Batch::JobQueue"
        Properties:
            ComputeEnvironmentOrder:
              - ComputeEnvironment: { Ref: "BatchComputeEnvironment" }
                Order: 1
            JobQueueName: { "Fn::Sub": "preprocessing-${Environment}-compute" }
            Priority: 1
            State: "ENABLED"

    ##########################################################################################################
    ##  MONITORING
    ##########################################################################################################

    LambdaMonitoringRole:
        Type: "AWS::IAM::Role"
        Properties:
            AssumeRolePolicyDocument:
                Version: "2012-10-17"
                Statement:
                  - Effect: "Allow"
                    Principal: { Service: [ "lambda.amazonaws.com" ] }
                    Action: "sts:AssumeRole"
            ManagedPolicyArns:
              - "arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
            Policies:
              - PolicyName: "default"
                PolicyDocument:
                    Version: "2012-10-17"
                    Statement:
                      - Action:
                          - "logs:CreateLogGroup"
                          - "logs:CreateLogStream"
                          - "logs:PutLogEvents"
                        Effect: "Allow"
                        Resource: "*"

                      - Action:
                          - "batch:DescribeComputeEnvironments"
                          - "batch:ListJobs"
                          - "cloudwatch:PutMetricData"
                          - "ec2:DescribeInstances"
                          - "elasticfilesystem:DescribeFileSystems"
                        Effect: "Allow"
                        Resource: "*"
            RoleName: { "Fn::Sub": "preprocessing-${Environment}-monitor-lambda-${AWS::Region}" }

    MonitoringLambda:
        Type: "AWS::Lambda::Function"
        Properties:
            Code:
                S3Bucket: { "Fn::Sub": "biometrix-infrastructure-${AWS::Region}" }
                S3Key: "lambdas/pipeline_monitor.zip"

            Environment:
                Variables:
                    ENVIRONMENT: { Ref: "Environment" }
                    BATCH_COMPUTE_ENVIRONMENT: { Ref: "BatchComputeEnvironment" }
                    BATCH_JOB_QUEUE: { Ref: "BatchJobQueue" }
                    BATCH_EFS_ID: { Ref: "EfsFileSystem" }
            Handler: "pipeline_monitor.handler"
            Runtime: "python3.6"
            Timeout: "30"
            Role: { "Fn::GetAtt" : [ "LambdaMonitoringRole", "Arn" ] }
            FunctionName: { "Fn::Sub": "preprocessing-${Environment}-pipeline-monitor" }
            Tags:
              - { Key: "Name", Value: { "Fn::Sub": "preprocessing-${Environment}-pipeline-monitor" } }
              - { Key: "Management", Value: "managed" }
              - { Key: "Project", Value: "preprocessing" }
              - { Key: "Environment", Value: { Ref: "Environment" } }

    MonitoringLambdaScheduledRule:
        Type: "AWS::Events::Rule"
        Properties:
            Description: "ScheduledRule"
            ScheduleExpression: "rate(1 minute)"
            State: "ENABLED"
            Targets:
              - Arn: { "Fn::GetAtt": [ "MonitoringLambda", "Arn" ] }
                Id: "TargetFunctionV1"

    MonitoringLambdaInvokePermission:
        Type: "AWS::Lambda::Permission"
        Properties:
            FunctionName: { Ref: "MonitoringLambda" }
            Action: "lambda:InvokeFunction"
            Principal: "events.amazonaws.com"
            SourceArn: { "Fn::GetAtt": [ "MonitoringLambdaScheduledRule", "Arn" ] }

Outputs:
    VpcId:
        Description: "The id of the VPC"
        Value: { Ref: "Vpc" }

    PrivateSubnetIds:
        Description: "The ids of the private subnets"
        Value: { "Fn::If": [ "MultiAz",
            { "Fn::Sub": "${PrivateSubnetAlpha},${PrivateSubnetBeta}" },
            { Ref: "PrivateSubnetAlpha" }
        ]}

    EfsId:
        Description: "The id of the Elastic File System"
        Value: { Ref: "EfsFileSystem" }

    JobQueueArn:
        Description: "The ARN of the Job Queue"
        Value: { Ref: "BatchJobQueue" }

    ComputeEnvironmentArn:
        Description: "The ARN of the ComputeEnvironment"
        Value: { Ref: "BatchComputeEnvironment" }
